# display-of-production-process-backend

./: .env.example  .flaskenv  .gitignore  README.md  app.py  docker-compose.yml  gen_mes_data.py  init_db.py  manage.py  pyproject.toml  requirements.txt  sssf.sql  test_apscheduler.py  test_getsqlserver.py  test_mes.py  test_migrate.py  测试SQLServer数据库.txt
app/: __init__.py  config.py  constants.py  init_data.py  init_db.py  models.py  scheduler.py  test.py
app/admin/: __init__.py  forms.py  views.py
app/end_api/: __init__.py  views.py
app/front_api/: __init__.py  views.py
app/home/: __init__.py  views.py
app/models/: __init__.py  admin.py  base.py  control.py  history.py  realtime.py
app/pull/: __init__.py  db.py  docker-compose.yml  models.py
app/pull/models/: __init__.py  base.py  mes.py  plc.py
app/react_app/: asset-manifest.json  index.html
app/schemas/: __init__.py
app/static/css/: custom.css
app/static/js/: bootstrap.min.js  custom.js  echarts.min.js  functions.js  jquery.min.js
app/templates/admin/: 404.html  (+26 more)
app/utils/: __init__.py  convert.py  schedule.py  string.py  time.py
data/: Z1（松散回潮工段）.csv  Z2（润叶加料工段）.csv
data/生丝水分数据csv/: 201707.csv  201710.csv  201711.csv  201712.csv  201801.csv  201802.csv  201807.csv  201808.csv  201810.csv  201902.csv  201903.csv  201905.csv  202001.csv  202002.csv  202005.csv  历史数据说明.docx
docs/: 依赖管理.md  创建测试采集数据库.md  创建测试采集数据库.txt  启动 docker 测试数据库.md  测试SQLServer数据库.txt  测试采集SQLServer中的数据.md  采集相关.md
init_data/: init_data.py
init_data/data/: KLD（烘丝工段）.csv  Z1（松散回潮工段）.csv  Z2（润叶加料工段）.csv  数据说明.xlsx
(+74 files in other folders)
