[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Artin <lengthmin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-WTF = "^0.14.3"
WTForms = "^2.3.3"
pandas = "^1.1.4"
apscheduler = "^3.6.3"
python-dotenv = "^0.15.0"
flask-cors = "^3.0.9"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.0"
arrow = "^0.17.0"
sqlalchemy-utils = "^0.36.8"
pyodbc = "^4.0.30"
pymysql = "^0.10.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
